fixed z-index on timelocation bar

--- a/template.css
+++ b/template.css
@@ -180,7 +180,7 @@ background: #b0b0b0;
     width: 30px;
     height: 100%;
     background: #ececec;
-    z-index: 999;
+    z-index: 99;
 
 }
 
